--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,1 +1,9 @@
-version = 2.5.0
+version = "3.0.5"
+fileOverride {
+  "glob:**/deriving/src/main/scala/**" {
+     runner.dialect = scala3
+  }
+  "glob:**/deriving/src/test/scala/**" {
+     runner.dialect = scala3
+  }
+}
